k8s/network-policies/00-vprofile-default-deny.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: vprofile-default-deny
  namespace: vprofile
spec:
  podSelector: {} 
  policyTypes: 
  - Ingress 
  - Egress
