k8s/network-policies/02-vproapp-allow-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vproapp-allow-public-ingress
  namespace: vprofile
spec:
  podSelector:
    matchLabels:
      app: vproapp
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 8080
