k8s/network-policies/allow-dns-net-pol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: vprofile
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}  # Match ANY namespace
      podSelector:
        matchLabels:
          k8s-app: kube-dns  # Target DNS pods specifically
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53















# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-dns
#   namespace: vprofile
# spec:
#   podSelector: {}
#   policyTypes:
#   - Egress
#   ingress: []
#   egress:
#   - to:
#     - namespaceSelector:
#         matchLabels:
#           kubernetes.io/metadata.name: kube-system
#     ports:
#     - protocol: UDP
#       port: 53
#     - protocol: TCP
#       port: 53

# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-dns
#   namespace: vprofile
# spec:
#   podSelector: {}
#   policyTypes:
#   - Egress
#   egress:
#   - to:
#     - namespaceSelector:
#         matchLabels:
#           name: kube-system
#     ports:
#     - protocol: UDP
#       port: 53
