k8s/network-policies/allow-vprofile.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vproapp-to-backend
  namespace: vprofile
spec:
  podSelector:
    matchLabels:
      app: vprodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vproapp
    ports:
    - protocol: TCP
      port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vproapp-to-memcached
  namespace: vprofile
spec:
  podSelector:
    matchLabels:
      app: vprocache
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vproapp
    ports:
    - protocol: TCP
      port: 11211

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: vprofile
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
    ports:
    - protocol: UDP
      port: 53
