k8s/network-policies/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vproapp-allow-ingress
  namespace: vprofile
spec:
  podSelector:
    matchLabels:
      app: vproapp
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: vprodb
    ports:
    - protocol: TCP
      port: 3306
  - to:
    - podSelector:
        matchLabels:
          app: vprocache
    ports:
    - protocol: TCP
      port: 11211
  - to:
    - podSelector:
        matchLabels:
          app: vpromq
    ports:
    - protocol: TCP
      port: 5672
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vprodb-allow-app
  namespace: vprofile
spec:
  podSelector:
    matchLabels:
      app: vprodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vproapp
    ports:
    - protocol: TCP
      port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vprocache-allow-app
  namespace: vprofile
spec:
  podSelector:
    matchLabels:
      app: vprocache
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vproapp
    ports:
    - protocol: TCP
      port: 11211
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vpromq-allow-app
  namespace: vprofile
spec:
  podSelector:
    matchLabels:
      app: vpromq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vproapp
    ports:
    - protocol: TCP
      port: 5672
